# researcher

./: README.md  constants.py  deep_research.py  email_agent.py  planner_agent.py  pyproject.toml  research_manager.py  search_agent.py  test_email.py  writer_agent.py
docs/: README.md
