[project]
name = "deep-research-ai-agent"
version = "0.1.0"
description = "An AI agent designed for deep research tasks."
authors = [{ name = "Mike Charles", email = "serverlessmike@gmail.com" }]
requires-python = ">=3.12"

# Runtime dependencies here
dependencies = [
    "openai",
    "openai-agents",
    "gradio",
    "python-dotenv",
    "sendgrid",
    "pydantic",
    "certifi>=2025.8.3",
]
